# rust-clean-architecture

./: .env  Cargo.toml
src/: app.rs  error.rs  infra.rs  main.rs
src/app/: repository.rs
src/app/domain/: user.rs
src/app/repository/: user_repository.rs
src/app/repository/memory/: user_repository.rs
src/app/usecase/account/: sign_up.rs
src/infra/: db.rs  repository.rs  routes.rs
src/infra/handlers/: user.rs
src/infra/handlers/user/: user_list_handler.rs
src/infra/repository/: repository.rs  user_repository.rs
src/infra/repository/mongo/: user_repository.rs
src/infra/repository/mongo/model/: user.rs
src/infra/routes/: user_routes.rs
