[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = "2.1.0"
serde = {version = "1.0", features = ["derive"] }
warp = "0.3"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1.52"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'